--- a/teaching.html
+++ b/teaching.html
@@ -41,26 +41,30 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="./projects.html">Projects</a></div>
-<div class="menu-item"><a href="./teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="./index.html">Home</a></div>
+<div class="menu-item"><a href="././projects.html">Projects</a></div>
+<div class="menu-item"><a href="././teaching.html" class="current">Teaching</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
 <div id="layout-content">
-<div id="text-img-container"><div id="img-container">
-<img src="images/andrea.jpg" alt="alt text" width="160px" height="160px" /></div>
-<div id="text-container"><p>Senior Scientist,<br /> <a href="http://www.idsc.ethz.ch" target=&ldquo;blank&rdquo;>Institute for Dynamical Systems and Control (IDSC)</a>, <br /><a href="https://www.ethz.ch/en.html" target=&ldquo;blank&rdquo;>ETH Zurich</a><br />
-Leonhardstrasse 21 <br />
-8092 Zurich, Switzerland <br /> 
-Phone: +41 044 632 04 85 <br />
-E-post: <i>carrona</i> [@] ethz [DOT] ch</p>
-</div></div>
-<h2>About me</h2>
-<p>I am a Senior Scientist in the <a href="http://www.idsc.ethz.ch/research-zeilinger.html" target=&ldquo;blank&rdquo;>Intelligent Control Systems</a> group led by <a href="vhttp://www.idsc.ethz.ch/research-zeilinger/people/person-detail.html?persid=142737" target=&ldquo;blank&rdquo;>Professor M. Zeilinger</a> at ETH Zurich. I received my PhD in Information Technology under the supervision of <a href="http://automatica.dei.unipd.it/people/schenato.html" target=&ldquo;blank&rdquo;>Professor Schenato</a> at the University of Padova. My research interests include model predictive control, learning-based control, multi-agent systems, and robotics.</p>
-<h2>Publications </h2>
-<p>You can find the updated list of pubblications in my 
-<a href="https://scholar.google.it/citations?user=Xy5t10gAAAAJ&amp;hl=it" target=&ldquo;blank&rdquo;>Google Scholar profile</a>.</p>
+<h2>Teaching Activities </h2>
+<ul>
+<li><p>2018-curr, ETH Zurich, Lecturer, Signals and Systems </p>
+</li>
+<li><p>2020-curr, ETH Zurich, co-Lecturer, Advanced Model Predictive Control</p>
+</li>
+<li><p>2022-curr, Ashesi University, Lecturer, Signals and Systems </p>
+</li>
+<li><p>2017, ETH Zurich, Teaching Assistant, Model Predictive Control </p>
+</li>
+<li><p>2015, UniPD, Teaching Assistant, Robotics, Vision and Control </p>
+</li>
+<li><p>2015, UniPD, Teaching Assistant, System Identification</p>
+</li>
+<li><p>2014, UniPD, Teaching Assistant, System Modelin</p>
+</li>
+</ul>
 </div> <!-- <div id="layout-content-container"> -->
 </div> <!--- <div id="layout"> --->
 </div> <!--- <div id="main-container"> --->
