minor polishing and typos removal

--- a/teaching.html
+++ b/teaching.html
@@ -62,7 +62,7 @@ MathJax.Hub.Config({
 </li>
 <li><p>2015, UniPD, Teaching Assistant, System Identification</p>
 </li>
-<li><p>2014, UniPD, Teaching Assistant, System Modelin</p>
+<li><p>2014, UniPD, Teaching Assistant, System Modeling</p>
 </li>
 </ul>
 </div> <!-- <div id="layout-content-container"> -->
