--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@ MathJax.Hub.Config({
 <div id="layout-content">
 <div id="text-img-container"><div id="img-container">
 <img src="images/andrea.jpg" alt="alt text" width="160px" height="160px" /></div>
-<div id="text-container"><p>Senior Scientist,<br /> <a href="http://www.idsc.ethz.ch" target=&ldquo;blank&rdquo;>Institute for Dynamical Systems and Control (IDSC)</a>, <br /><a href="https://www.ethz.ch/en.html" target=&ldquo;blank&rdquo;>ETH Zurich</a><br />
+<div id="text-container"><p>Andrea Carron <br />
+Senior Scientist <br /> <a href="http://www.idsc.ethz.ch" target=&ldquo;blank&rdquo;>Institute for Dynamical Systems and Control (IDSC)</a><br />
+<a href="https://www.ethz.ch/en.html" target=&ldquo;blank&rdquo;>ETH Zurich</a><br />
 Leonhardstrasse 21 <br />
 8092 Zurich, Switzerland <br /> 
-Phone: +41 044 632 04 85 <br />
-E-post: <i>carrona</i> [@] ethz [DOT] ch</p>
+E-post: surnamefirstletterofname [@] ethz [DOT] ch</p>
 </div></div>
 <h2>About me</h2>
-<p>I am a Senior Scientist in the <a href="http://www.idsc.ethz.ch/research-zeilinger.html" target=&ldquo;blank&rdquo;>Intelligent Control Systems</a> group led by <a href="vhttp://www.idsc.ethz.ch/research-zeilinger/people/person-detail.html?persid=142737" target=&ldquo;blank&rdquo;>Professor M. Zeilinger</a> at ETH Zurich. I received my PhD in Information Technology under the supervision of <a href="http://automatica.dei.unipd.it/people/schenato.html" target=&ldquo;blank&rdquo;>Professor Schenato</a> at the University of Padova. My research interests include model predictive control, learning-based control, multi-agent systems, and robotics.</p>
+<p>I am a Senior Scientist in the <a href="http://www.idsc.ethz.ch/research-zeilinger.html" target=&ldquo;blank&rdquo;>Intelligent Control Systems</a> group led by Professor M. Zeilinger at ETH Zurich. I received my PhD in Information Technology at the University of Padova. My research interests include model predictive control, learning-based control, multi-agent systems, and robotics.</p>
 <h2>Publications </h2>
 <p>You can find the updated list of pubblications in my 
 <a href="https://scholar.google.it/citations?user=Xy5t10gAAAAJ&amp;hl=it" target=&ldquo;blank&rdquo;>Google Scholar profile</a>.</p>
